# aviutl-DynamicPolygon

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  pack.ps1
script/: @動く多角形.anm
src/: DynamicPolygon.rc  resource.h
